[gd_scene load_steps=2 format=3 uid="uid://ea3l6l2pfy2l"]

[ext_resource type="Script" uid="uid://bvrxu3twpj2o5" path="res://scenes/ui/gm_command_panel.gd" id="1_kbetf"]

[node name="GmCommandPanel" type="MarginContainer"]
custom_minimum_size = Vector2(600, 0)
offset_right = 600.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_kbetf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Input" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "输入命令"

[node name="SubmitBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "提交"

[connection signal="text_submitted" from="HBoxContainer/Input" to="." method="_on_input_text_submitted"]
[connection signal="pressed" from="HBoxContainer/SubmitBtn" to="." method="_on_submit_btn_pressed"]
